--- a/public/404.html
+++ b/public/404.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Single Page Apps for GitHub Pages</title>
+    <title>Empire builders Nantucket</title>
     <script type="text/javascript">
         // Single Page Apps for GitHub Pages
         // MIT License
