--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
     -->
     <title>Empire builders Nantucket</title>
     <!-- Start Single Page Apps for GitHub Pages -->
-    <script type="text/babel">
+    <script type="text/javascript">
         // Single Page Apps for GitHub Pages
         // MIT License
         // https://github.com/rafgraph/spa-github-pages
