--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,6 @@
             name="description"
             content="Web site created using create-react-app"
     />
-    <link crossorigin="use-credentials" rel="manifest" href="./manifest.json"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png"/>
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -17,9 +16,9 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;300;400;600;700&display=swap"
-          rel="stylesheet">
+          rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;600;700;900&display=swap"
-          rel="stylesheet">
+          rel="stylesheet"/>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
