--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
     -->
     <title>Empire builders Nantucket</title>
     <!-- Start Single Page Apps for GitHub Pages -->
-    <script type="text/javascript">
+    <script type="text/jsx">
         // Single Page Apps for GitHub Pages
         // MIT License
         // https://github.com/rafgraph/spa-github-pages
@@ -43,7 +43,7 @@
         // the correct url will be waiting in the browser's history for
         // the single page app to route accordingly.
         (function (l) {
-            if (l.search[1] === '/') {
+            if (l.search[1] === '/empire_builders') {
                 var decoded = l.search.slice(1).split('&').map(function (s) {
                     return s.replace(/~and~/g, '&')
                 }).join('?');
