--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/empire_builders/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link crossorigin="use-credentials" rel="manifest" href="./manifest.json"/><link rel="apple-touch-icon" href="/empire_builders/logo192.png"/><link rel="manifest" href="/empire_builders/manifest.json"/><link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;300;400;600;700&display=swap" rel="stylesheet"/><link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;600;700;900&display=swap" rel="stylesheet"/><title>Empire builders Nantucket</title><script type="text/jsx">// Single Page Apps for GitHub Pages
+<!doctype html><html lang="en"><head><base href="/"/><meta charset="utf-8"/><link rel="icon" href="/empire_builders/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link crossorigin="use-credentials" rel="manifest" href="./manifest.json"/><link rel="apple-touch-icon" href="/empire_builders/logo192.png"/><link rel="manifest" href="/empire_builders/manifest.json"/><link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;300;400;600;700&display=swap" rel="stylesheet"/><link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;600;700;900&display=swap" rel="stylesheet"/><title>Empire builders Nantucket</title><script type="text/jsx">// Single Page Apps for GitHub Pages
         // MIT License
         // https://github.com/rafgraph/spa-github-pages
         // This script checks to see if a redirect is present in the query string,
@@ -9,7 +9,7 @@
         // the correct url will be waiting in the browser's history for
         // the single page app to route accordingly.
         (function (l) {
-            if (l.search[1] === '/empire_builders') {
+            if (l.search[1] === '/') {
                 var decoded = l.search.slice(1).split('&').map(function (s) {
                     return s.replace(/~and~/g, '&')
                 }).join('?');
